# sidepool

doc/: 00-sidepools-are-awesome.md  01-overview-and-conventions.md  02-transactions.md  03-setup-and-teardown.md  04-swap-party.md  05-reseat-splice.md  06-htlcs.md  07-irregular-swap-party.md  10-peerswap-in-sidepool.md  10-peerwap-in-sidepool.md
libsidepool/: .gitignore  AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  Makefile.am  README.md  configure.ac  libsidepool.cpp  libsidepool.h
libsidepool/Sidepool/: Base64x.cpp  Base64x.hpp  Freed.hpp  Idler.cpp  Idler.hpp  Io.hpp  Logger.cpp  Logger.hpp  M.cpp  M.hpp  Main.cpp  Main.hpp  Math.cpp  Math.hpp  Randomizer.cpp  Randomizer.hpp  Saver.cpp  Saver.hpp  String.cpp  String.hpp  Util.hpp  stringify.hpp
libsidepool/Sidepool/Crypto/: CSPRNG.cpp  CSPRNG.hpp  SHA256.cpp  SHA256.hpp  chacha20_ietf.cpp  chacha20_ietf.hpp  memzero.cpp  memzero.hpp
libsidepool/Sidepool/Mod/: all.cpp  all.hpp
libsidepool/Sidepool/Msg/: ProvideMath.hpp  ProvideSaver.hpp  Start.hpp
libsidepool/Sidepool/S/: Bus.cpp  Bus.hpp  Lessee.cpp  Lessee.hpp  Lessor.cpp  Lessor.hpp
libsidepool/Sidepool/S/Detail/: Lease.hpp  Registry.cpp  Registry.hpp  TypedLease.hpp  TypedRegistry.hpp
libsidepool/Sidepool/SerDe/: Archive.cpp  Archive.hpp  Eof.hpp  Trait.hpp  serialize.hpp
libsidepool/Testing/: Idler.hpp
libsidepool/tests/: .gitignore
libsidepool/tests/base64x/: test_simple.cpp
libsidepool/tests/crypto/: test_sha256.cpp
libsidepool/tests/idler/: test_methods.cpp
libsidepool/tests/s/: test_kill_lessee.cpp  test_kill_lessor.cpp  test_simple_bus.cpp
libsidepool/tests/serde/: test_plain.cpp
libsidepool/tests/string/: test_fmt.cpp  test_hex.cpp  test_printhex.cpp
libsidepool/tests/stringify/: test_simple.cpp
